[tool.poetry]
name = "jupiter-solana"
version = "0.0.1"
description = "Python Jupiter SDK"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/truemagic-coder/jupiter"
keywords = ["jupiter", "solana", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "jupiter_solana"}]

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
solana = "0.36.1"
solders = "0.23.0"
requests = "2.32.3"
base58 = "2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
